[package]
name = "oxidized_armoury"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="oxidized_armoury"
path="src/lib.rs"

[[bin]]
name = "reflective_loader"
path = "src/bin/ReflectiveLoader/main.rs"

[dependencies]
windows = { version = "0.56.0", features = ["Win32_Security_Authentication_Identity", "Win32_System_WindowsProgramming", "Win32_System_Memory", "Wdk_System_SystemServices", "Win32_Security", "Win32_System_Threading"] }
